--- a/.github/workflows/obs-tarball.yml
+++ b/.github/workflows/obs-tarball.yml
@@ -33,8 +33,9 @@ jobs:
           mkdir activate-linux
           cp -r src/ Makefile *.md activate-linux/
           tar -cf activate-linux-git.tar.gz activate-linux/
-          uses: actions-go/push@master
-          with:
+      
+      - uses: actions-go/push@master
+        with:
             force: true
             create-commit: false
             remote: origin
