--- a/Makefile.BSD
+++ b/Makefile.BSD
@@ -3,14 +3,11 @@ MAN=
 
 .PATH: ${.CURDIR}/src
 
-SRCS=		$(wildcard *.c)
+SRCS=		activate_linux.c color.c i18n.c
 
 CFLAGS+=	-I/usr/local/include
-CFLAGS+=	-I/usr/local/include/cairo
-CFLAGS += \
-	$(CFLAGS) \
-	$(shell pkg-config --cflags --libs x11 xfixes xinerama) \
-	$(shell pkg-config --cflags --libs cairo)
+CFLAGS!=	pkg-config --cflags --libs x11 xfixes xinerama
+CFLAGS!=	pkg-config --cflags --libs cairo
 
 LDFLAGS+=	-L/usr/local/lib
 
