--- a/Makefile.BSD
+++ b/Makefile.BSD
@@ -7,6 +7,7 @@ SRCS=		activate_linux.c color.c i18n.c
 
 CFLAGS+=	-I/usr/local/include
 CFLAGS!=	pkg-config --cflags --libs x11 xfixes xinerama xrandr
+CFLAGS!=	pkg-config --cflags --libs wayland-client
 CFLAGS!=	pkg-config --cflags --libs cairo
 
 LDFLAGS+=	-L/usr/local/lib
