--- a/Makefile.BSD
+++ b/Makefile.BSD
@@ -9,6 +9,7 @@ CFLAGS+=	-I/usr/local/include
 CFLAGS!=	pkg-config --cflags --libs x11 xfixes xinerama xrandr
 CFLAGS!=	pkg-config --cflags --libs wayland-client
 CFLAGS!=	pkg-config --cflags --libs cairo
+CFLAGS!=	pkg-config --cflags --libs libconfig
 
 LDFLAGS+=	-L/usr/local/lib
 
@@ -17,5 +18,6 @@ LDADD+=		-lXfixes
 LDADD+=		-lXinerama
 LDADD+=		-lcairo
 LDADD+=		-lrt
+LDADD+=		-lconfig
 
 .include <bsd.prog.mk>
