Fixed bugs: * segfault while load config from non-existent file * broken logic in logs.c (required additional -v and overflows enum Verbosity)
Added bugs:
* GDI support => ability to compile on bloatware Windows Vista+ (target version may be reduced to XP if you steal )
* partial support of partial OS ReactOS

* Replaced "slant" with "italic". Because it is common name, come on
* libconfig now optional and checked in Makefile automagically
* options are separated from draw file and now global coz c'mon every file uses them, there is no need to suffer with pointers
* some __debug__ outputs misses \n in the end
* mistype "skip-composit__i__or" in long parameter

And many other

--- a/example.cfg
+++ b/example.cfg
@@ -3,7 +3,7 @@ text-message = "This is an example configuration file.";
 text-font = "Noto Sans";
 text-bold	= true;
 text-italic	= true;
-skip-compositor = false;
+bypass-compositor = false;
 gamescope = false;
 text-color-r = 0.3;
 text-color-g = 0.7;
