CI/CD test optional libconfig

--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -9,17 +9,23 @@ jobs:
 
       - name: speedup dpkg
         run: sudo sh -c "echo 'force-unsafe-io' > /etc/dpkg/dpkg.cfg.d/force-unsafe-io"
-      - name: speedup installing dependencies
-        run: sudo apt remove man-db
 
       - name: install dependencies
-        run: sudo apt install libconfig-dev libcairo2-dev libxi-dev libx11-dev x11proto-core-dev x11proto-dev libxt-dev libxfixes-dev libxinerama-dev libxrandr-dev libwayland-dev wayland-protocols
+        run: sudo apt-get install \
+          libcairo2-dev \
+          libxi-dev libx11-dev x11proto-core-dev x11proto-dev libxt-dev libxfixes-dev libxinerama-dev libxrandr-dev \
+          libwayland-dev wayland-protocols
+
+      - name: build (GCC w/o libconfig)
+        run: make clean && make
+
+      - name: install libconfig
+        run: sudo apt-get install libconfig-dev
 
       - name: build (GCC)
-        run: make
+        run: make clean && make
 
       - name: build (clang)
         run: |
           export CC=clang
-          make clean
-          make
+          make clean && make
