--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -11,10 +11,11 @@ jobs:
         run: sudo sh -c "echo 'force-unsafe-io' > /etc/dpkg/dpkg.cfg.d/force-unsafe-io"
 
       - name: install dependencies
-        run: sudo apt-get install \
-          libcairo2-dev \
-          libxi-dev libx11-dev x11proto-core-dev x11proto-dev libxt-dev libxfixes-dev libxinerama-dev libxrandr-dev \
-          libwayland-dev wayland-protocols
+        run: |
+          sudo apt-get install \
+            libcairo2-dev \
+            libxi-dev libx11-dev x11proto-core-dev x11proto-dev libxt-dev libxfixes-dev libxinerama-dev libxrandr-dev \
+            libwayland-dev wayland-protocols
 
       - name: build (GCC w/o libconfig)
         run: make clean && make
